# ecfp

./: CMakeLists.txt  README.md  build.bat  ecfp.cpp  ecfp.h  main.cpp
cmake/modules/: FindOpenBabel.cmake
